fix: enhance card layout and styling for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,10 @@ body {
     width: 90vw;
 }
 
+main {
+    scrollbar-width: none;
+}
+
 .material-symbols-outlined {
     font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
     vertical-align: middle;
@@ -212,11 +216,30 @@ body {
 
 /* --- Tarjetas --- */
 .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     background-color: var(--bg-panel);
     border: 1px solid var(--borde);
     border-radius: 16px;
     padding: 24px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+
+    p {
+        text-align: center;
+    }
+}
+
+.available-card {
+    .card-top {
+        justify-content: start;
+        gap: 16px;
+    }
+
+    .texto-primario {
+        font-size: 40px;
+
+    }
 }
 
 .card-destacada {
@@ -229,8 +252,7 @@ body {
 }
 
 .card-top {
-    align-items: flex-start;
-    margin-bottom: 16px;
+    align-items: center;
 }
 
 .card-titulo {
